# energy-firmware-services

./: CMakeLists.txt  README.md
docs/: empes_doxy_config  empes_doxygen_introduction.h  empes_doxygen_layout.xml
services/cli/: CMakeLists.txt
services/cli/include/: adi_cli.h  adi_cli_iiod_xml.h  adi_cli_memory.h  adi_cli_private.h  adi_cli_status.h  adi_cli_utility.h  cli_dispatch.h  cli_history.h  cli_interface.h  cli_private.h  cli_utils.h  iiod_dispatch_table.h  internal_dispatch_table.h
services/cli/source/: adi_cli.c  adi_cli_iiod_xml.c  adi_cli_utility.c  cli_dispatch.c  cli_history.c  cli_interface.c  cli_private.c  cli_utils.c
services/crc/: CMakeLists.txt
services/crc/include/: adi_crc.h  adi_crc_ccitt16.h  adi_crc_sw.h
services/crc/source/: adi_crc.c  adi_crc_ccitt16.c  adi_crc_lut.c  adi_crc_nolut.c
services/include/: adi_circ_buf.h  adi_delay.h
services/nvm/: CMakeLists.txt
services/nvm/include/: adi_nvm.h  adi_nvm_memory.h  adi_nvm_private.h  adi_nvm_status.h  nvm_device.h
services/nvm/source/: adi_nvm.c  nvm_common.c  nvm_flc_max32670.c  nvm_mb85rs.c
